<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qlgc.phoneasmic.MainActivity"
    android:nestedScrollingEnabled="true"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_your_cellphone_as_a_microphone"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="#f408f8"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/ipAddressAll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ipAddress"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:hint="@string/_255_255_255_255"
            android:maxLength="15"
            android:textColor="#ab0101ff"/>

    </LinearLayout>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/startButton"
        android:onClick="startRecording"
        android:layout_below="@+id/ipAddressAll"
        android:layout_marginLeft="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/finishButton"
        android:onClick="finishRecording"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/startButton"
        android:layout_alignStart="@+id/startButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exitButton"
        android:onClick="exitApp"
        android:nestedScrollingEnabled="true"
        android:textColor="#fb0303"
        android:layout_below="@+id/finishButton"
        android:layout_alignStart="@+id/finishButton" />

    <com.androidplot.xy.XYPlot
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mySimpleXYPlot"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/exitButton" />



</RelativeLayout>
